Phase 5 (Migrations & Database Creation)

--- a/AnimalCare/appsettings.json
+++ b/AnimalCare/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AnimalCareDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.;Initial Catalog=AnimalCareDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
